# nerdfix

./: .cspell.json  .envrc  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cspell.json  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  cicd.yml  release.yaml
.husky/: pre-push
scripts/: cargo-check-report
src/: autocomplete.rs  cache-version  cached.json  cached.txt  cli.rs  db.rs  error.rs  icon.rs  icons.json  index-rev  index.json  input.rs  main.rs  parser.rs  patch-nf-3_3_0.json  prompt.rs  runtime.rs  substitution.json  substitutions.json  util.rs  utils.rs
tests/: cli.rs  test-data.txt  test-index.json  test-input.json  test-input.txt  test-substitution.json
tests/cli/: check.stderr  check.stdout  check_json.stderr  check_json.stdout  check_nf_3_3_0.stderr  check_nf_3_3_0.stdout  check_with_db.stderr  check_with_db.stdout  check_with_input.stderr  fix.stderr  fix.stdout  fix_with_exact_subs.stderr  fix_with_exact_subs.stdout  fix_with_prefix_subs.stderr  fix_with_prefix_subs.stdout  fix_with_replacements.stdout  fix_with_substitutions.stdout
