[package]
name = "nerdfix"
version = "0.3.1"
authors = ["loichyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
codespan-reporting = "0.11"
colored = "2.0"
derive_more = "0.99"
extend = "1.1"
indexmap = "1.9"
inquire = "0.6"
itertools = "0.10"
noodler = "0.1"
once_cell = "1.17"
select = "0.6"
serde_json = "1.0"
thisctx = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"

[dependencies.shadow-rs]
version = "0.21"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
strip-ansi-escapes = "0.1"

[build-dependencies.shadow-rs]
version = "0.21"
default-features = false
