[package]
name = "nerdfix"
version = "0.3.1"
authors = ["loichyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
codespan-reporting = "0.11"
derive_more = "0.99"
extend = "1.1"
indexmap = "2.0"
inquire = "0.6"
itertools = "0.11"
noodler = "0.1"
nu-ansi-term = "0.49"
once_cell = "1.17"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = { version = "0.23", default-features = false }
thisctx = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
strip-ansi-escapes = "0.2"

[build-dependencies]
shadow-rs = { version = "0.23", default-features = false }
