[package]
name = "nerdfix"
version = "0.4.1"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
bytesize = "1.3"
clap = { version = ">=4.0, <4.5", features = ["derive"] }
codespan-reporting = "0.11.1"
content_inspector = "0.2.4"
extend = "1.2"
indexmap = "2.2"
inquire = "0.7.5"
itertools = "0.13.0"
miette = { version = "7.2", features = ["fancy"] }
noodler = "0.1.0"
nu-ansi-term = "0.50.0"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = { version = "0.29.0", default-features = false }
thisctx = "0.4.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = { version = ">=2.0, <2.0.13", default-features = false, features = [
  "color",
] }
predicates = { version = "3.1", default-features = false, features = [
  "color",
  "diff",
] }
strip-ansi-escapes = "0.2.0"

[build-dependencies]
shadow-rs = { version = "0.29.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
